# opengl-game

./: .gitignore  CMakeLists.txt
assets/levels/: four.lvl  one.lvl  three.lvl  two.lvl
include/glad/: glad.h
scripts/: setup_assets.py
shaders/: particle.vs  shader.fs  shader.vs
src/: audio_engine.ixx  ball_object.ixx  game.ixx  game_level.ixx  game_object.ixx  glad.c  main.cpp  particle_generator.ixx  resource_manager.ixx  shader.ixx  sprite_renderer.ixx  text_renderer.ixx  texture.ixx  window.ixx
